--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="bn">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Masum Casino - Card Matka</title>
   <style>
     * {
@@ -172,6 +173,68 @@
     }
     .win-round { color: #76ff03; }
     .loss-round { color: #ff5252; }
+
+    /* Responsive Design for Mobile */
+    @media (max-width: 480px) {
+      body {
+        padding: 15px 8px;
+      }
+      h1 {
+        font-size: 24px;
+      }
+      #balance {
+        font-size: 18px;
+        padding: 8px 16px;
+        min-width: 120px;
+      }
+      #stats {
+        min-width: auto;
+        font-size: 14px;
+      }
+      #timer {
+        font-size: 16px;
+        margin-bottom: 12px;
+      }
+      .wheel-row {
+        gap: 20px;
+      }
+      .wheel {
+        width: 90px;
+        height: 90px;
+        font-size: 32px;
+        border-width: 3px;
+      }
+      .wheel .items {
+        font-size: 32px;
+      }
+      .wheel .item {
+        height: 90px;
+        line-height: 90px;
+      }
+      .bet-container {
+        max-width: 100%;
+        gap: 8px;
+      }
+      .bet-box {
+        width: 60px;
+        padding: 8px 5px;
+      }
+      .bet-box h3 {
+        font-size: 16px;
+      }
+      .bet-box small {
+        font-size: 12px;
+        margin-bottom: 4px;
+      }
+      .bet-box button {
+        font-size: 12px;
+        padding: 4px 6px;
+      }
+      #history {
+        max-height: 200px;
+        font-size: 12px;
+      }
+    }
   </style>
 </head>
 <body>
