--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Masum Casino - Card Matka</title>
+  <title>Masum Mahmud Limited</title>
   <style>
     * {
       margin: 0; padding: 0; box-sizing: border-box; font-family: 'Segoe UI', sans-serif;
@@ -316,7 +316,7 @@
     Object.entries(selectedBets).forEach(([bet, count]) => {
       stake += count * betAmount;
       if (bet === finalCard || bet === finalSuit) {
-        totalWin += count * betAmount * 2.7;
+        totalWin += count * betAmount * 3;
         winItems.push(bet);
       } else {
         if (count > 0) lostItems.push(bet);
