--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
   </style>
 </head>
 <body>
-  <h1>🃏 Masum Casino - Card Matka</h1>
+  <h1>🃏 Masum Mahmud Limited</h1>
   <div id="balance">Balance: ৳5000</div>
   <div id="stats">Total Stake: ৳0</div>
   <div id="timer">⏳ Place your bet... (15s)</div>
@@ -187,7 +187,7 @@
   <div class="bet-container" id="betArea"></div>
 
   <div id="history">
-    <h2>🎲 Round History</h2>
+    <h2>🃏 Round History</h2>
     <div id="roundLog"></div>
   </div>
 
@@ -316,7 +316,7 @@
     Object.entries(selectedBets).forEach(([bet, count]) => {
       stake += count * betAmount;
       if (bet === finalCard || bet === finalSuit) {
-        totalWin += count * betAmount * 3;
+        totalWin += count * betAmount * 3.2;
         winItems.push(bet);
       } else {
         if (count > 0) lostItems.push(bet);
