--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
   </style>
 </head>
 <body>
-  <h1>🃏 Masum Mahmud Limited</h1>
+  <h1>👑 Masum King 👑</h1>
   <div id="balance">Balance: ৳5000</div>
   <div id="stats">Total Stake: ৳0</div>
   <div id="timer">⏳ Place your bet... (15s)</div>
@@ -187,7 +187,7 @@
   <div class="bet-container" id="betArea"></div>
 
   <div id="history">
-    <h2>🃏 Round History</h2>
+    <h2>🎰 Round History 🎰</h2>
     <div id="roundLog"></div>
   </div>
 
