--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
     const maxBetPerItem = 5;
     let totalStake = 0;
 
-    const cards = ['K', 'Q', 'J', 'Z', 'K', 'Q', 'J', 'Z'];
+    const cards = ['A','B','C','D'];
     const suits = ['♠', '♥', '♦', '♣'];
     const allItems = [...new Set(cards), ...suits];
     const multipliers = [2, 2.5, 3, 4, 5, 6, 7];
