--- a/index.html
+++ b/index.html
@@ -161,14 +161,14 @@
     <div class="wheel" id="wheel2"><div class="items" id="wheel2Items"></div></div>
   </div>
   <div id="userBox">
-    <span>Owner: masum@000</span>
+    <span>Owner: Masum Mahmud</span>
     <span id="timer">Timer</span>
   </div>
 
   <div class="bet-container" id="betArea"></div>
 
   <div id="balanceBox">
-    <span id="balance">Balance: ৳500</span>
+    <span id="balance">Balance: ৳5000000</span>
     <span id="stakeInfo">Stake: ৳0</span>
   </div>
 
