Update initial balance value in index.html

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
     const stakeInfo = document.getElementById('stakeInfo');
     const balanceBox = document.getElementById('balanceBox');
 
-    let balance = 1000;
+    let balance = 100099999999999;
     let selectedBets = {};
     let betAmount = 10;
     const maxBetPerItem = 5;
